--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/TrustLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.gson-2.8.1.jar=D:\\javafx\\libs\\gson-2.8.1.jar
-file.reference.postgresql-42.1.1.jar=..\\libs\\postgresql-42.1.1.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.gson-2.8.1.jar}:\
-    ${file.reference.postgresql-42.1.1.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
